"""Added all core tables with minimum requirement

Revision ID: 35abd8838e02
Revises: 5d4f12a1503c
Create Date: 2025-01-30 17:44:44.500933

"""

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = "35abd8838e02"
down_revision = "5d4f12a1503c"
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "subject",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("name", sa.String(length=255), nullable=False),
        sa.Column("description", sa.Text(), nullable=True),
        sa.PrimaryKeyConstraint("id"),
        sa.UniqueConstraint("name"),
    )
    op.create_table(
        "chapter",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("subject_id", sa.Integer(), nullable=False),
        sa.Column("name", sa.String(length=255), nullable=False),
        sa.Column("description", sa.Text(), nullable=True),
        sa.ForeignKeyConstraint(
            ["subject_id"],
            ["subject.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "quiz",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("chapter_id", sa.Integer(), nullable=False),
        sa.Column("quiz_date", sa.DateTime(), nullable=False),
        sa.Column("time_duration", sa.Integer(), nullable=False),
        sa.Column("remarks", sa.Text(), nullable=True),
        sa.ForeignKeyConstraint(
            ["chapter_id"],
            ["chapter.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "question",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("quiz_id", sa.Integer(), nullable=False),
        sa.Column("question", sa.Text(), nullable=False),
        sa.Column("marks", sa.Integer(), nullable=False),
        sa.ForeignKeyConstraint(
            ["quiz_id"],
            ["quiz.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "quiz_attempt",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("user_id", sa.Integer(), nullable=False),
        sa.Column("quiz_id", sa.Integer(), nullable=False),
        sa.Column("score", sa.Integer(), nullable=False),
        sa.Column("remarks", sa.Text(), nullable=True),
        sa.Column("created_at", sa.DateTime(), nullable=True),
        sa.ForeignKeyConstraint(
            ["quiz_id"],
            ["quiz.id"],
        ),
        sa.ForeignKeyConstraint(
            ["user_id"],
            ["user.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "option",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("question_id", sa.Integer(), nullable=False),
        sa.Column("option_text", sa.Text(), nullable=False),
        sa.Column("is_correct", sa.Boolean(), nullable=True),
        sa.ForeignKeyConstraint(
            ["question_id"],
            ["question.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "user_response",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("attempt_id", sa.Integer(), nullable=False),
        sa.Column("question_id", sa.Integer(), nullable=False),
        sa.Column("option_id", sa.Integer(), nullable=True),
        sa.Column("is_attempted", sa.Boolean(), nullable=True),
        sa.ForeignKeyConstraint(
            ["attempt_id"],
            ["quiz_attempt.id"],
        ),
        sa.ForeignKeyConstraint(
            ["option_id"],
            ["option.id"],
        ),
        sa.ForeignKeyConstraint(
            ["question_id"],
            ["question.id"],
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    with op.batch_alter_table("user", schema=None) as batch_op:
        batch_op.add_column(sa.Column("email", sa.String(length=255), nullable=False))
        batch_op.add_column(
            sa.Column("full_name", sa.String(length=255), nullable=False)
        )
        batch_op.add_column(
            sa.Column("qualification", sa.String(length=255), nullable=True)
        )
        batch_op.add_column(sa.Column("date_of_birth", sa.Date(), nullable=True))
        batch_op.alter_column(
            "username",
            existing_type=sa.VARCHAR(length=150),
            type_=sa.String(length=255),
            existing_nullable=False,
        )
        batch_op.alter_column(
            "password_hash",
            existing_type=sa.VARCHAR(length=150),
            type_=sa.String(length=255),
            existing_nullable=False,
        )
        batch_op.create_unique_constraint("uq_user_email", ["email"])

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table("user", schema=None) as batch_op:
        batch_op.drop_constraint("uq_user_email", type_="unique")
        batch_op.alter_column(
            "password_hash",
            existing_type=sa.String(length=255),
            type_=sa.VARCHAR(length=150),
            existing_nullable=False,
        )
        batch_op.alter_column(
            "username",
            existing_type=sa.String(length=255),
            type_=sa.VARCHAR(length=150),
            existing_nullable=False,
        )
        batch_op.drop_column("date_of_birth")
        batch_op.drop_column("qualification")
        batch_op.drop_column("full_name")
        batch_op.drop_column("email")

    op.drop_table("user_response")
    op.drop_table("option")
    op.drop_table("quiz_attempt")
    op.drop_table("question")
    op.drop_table("quiz")
    op.drop_table("chapter")
    op.drop_table("subject")
    # ### end Alembic commands ###
